fix: fix overflow on mobile devices

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -657,7 +657,7 @@ $default-text-shadow-spread: false;
   position: relative;
 
   &::after {
-    @apply absolute grid place-items-center text-2xl drop-shadow-sm -inset-10 dark:bg-neutral-600/10 dark:shadow-black/30;
+    @apply absolute grid place-items-center text-2xl drop-shadow-sm -inset-4 dark:bg-neutral-600/10 dark:shadow-black/30;
     content: 'In Progress...';
 
     box-shadow: inset 0 0 30px 10px var(--tw-shadow-color);
